--- a/newwrk.HTMl
+++ b/newwrk.HTMl
@@ -1,6 +1,6 @@
 <!Doctype html>
 <head>
-<title>New work </title>
+<title>New work jenkins </title>
 <link rel="icon" type="image/x-icon" href="C:\Users\jappaswamy\Desktop\Training\icon.png">
 <style>
 p{
